--- a/.github/workflows/day1_lesson6_ci_cd.yml
+++ b/.github/workflows/day1_lesson6_ci_cd.yml
@@ -52,6 +52,17 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v3
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install dependencies
+      run: |
+        cd "Day 1/lesson-6-ci-cd"
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Train model for deployment
       run: |
         cd "Day 1/lesson-6-ci-cd"
