--- a/.github/workflows/day1_lesson6_ci_cd.yml
+++ b/.github/workflows/day1_lesson6_ci_cd.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'Day 1/lesson-6-ci-cd/**'  # Only trigger when files in this lesson change
+      - .github/workflows/day1_lesson6_ci_cd.yml
   pull_request:
     branches:
       - main
