--- a/Day 2/lesson-2-kubernetes-basics/k8s-deployment.yml
+++ b/Day 2/lesson-2-kubernetes-basics/k8s-deployment.yml
@@ -2,31 +2,32 @@
 apiVersion: v1  
 kind: Service   # Type of resource being created
 metadata:
-  name: detect-age-api  # Name of the Service
+  name: age-detect  # Name of the Service
 spec:
   type: NodePort        # Service type that exposes the pod on a node IP and port
   selector:
-    app: detect-age-api  # Must match the label on the pod
+    app: age-detect  # Must match the label on the pod
   ports:
-    - port: 5000         # Port exposed inside the cluster
+    - port: 8080         # Port exposed inside the cluster
       nodePort: 30600    # Port exposed on each node for external access
 ---
 apiVersion: apps/v1    
 kind: Deployment        # Type of resource being created
 metadata:
-  name: detect-age-api  # Name of the Deployment
+  name: age-detect  # Name of the Deployment
 spec:
   replicas: 1           # Number of pod instances to run
   selector:
     matchLabels:
-      app: detect-age-api  # Must match the pod label
+      app: age-detect  # Must match the pod label
   template:
     metadata:
       labels:
-        app: detect-age-api  # Label used to identify pods for this deployment
+        app: age-detect  # Label used to identify pods for this deployment
     spec:
       containers:
-        - name: detect-age-api               # Name of the container
-          image: mariamhsein/age_detect:latest   # Docker image to deploy
+        - name: age-detect              # Name of the container
+          image: age-detect:latest   # Docker image to deploy
+          imagePullPolicy: Never
           ports:
-            - containerPort: 5000           # Port the container listens on
+            - containerPort: 8080           # Port the container listens on
