--- a/Day 2/lesson-5-kubernetes-hpa/k8s-deployment.yml
+++ b/Day 2/lesson-5-kubernetes-hpa/k8s-deployment.yml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: detect-age-api
+  name: age-detect
 spec:
   type: NodePort
   selector:
-    app: detect-age-api
+    app: age-detect
   ports:
     - port: 5000
       nodePort: 30600
@@ -15,20 +15,21 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: detect-age-api
+  name: age-detect
 spec:
   replicas: 1  # Initial pod count; HPA will manage scaling
   selector:
     matchLabels:
-      app: detect-age-api
+      app: age-detect
   template:
     metadata:
       labels:
-        app: detect-age-api
+        app: age-detect
     spec:
       containers:
-        - name: detect-age-api
-          image: mariamhsein/age_detect:latest
+        - name: age-detect
+          image: age-detect:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 5000
           resources:
