--- a/Day 2/lesson-7-ab-testing/requirements.txt
+++ b/Day 2/lesson-7-ab-testing/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.95.0
-uvicorn==0.22.0
-scikit-learn==1.2.2
-pandas==1.5.3
-numpy==1.24.2
-requests==2.28.2
-pickle-mixin==1.0.2
+fastapi>=0.104.0
+uvicorn>=0.24.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+numpy>=1.24.0
+requests>=2.31.0
+imbalanced-learn>=0.10.0
